# lengyeltamas

./: .gitignore  README.md
exercise week 2/microwave oven/: main.c
exercise week/01_DrawTriangle/: main.cpp
exercise week/02_DrawPyramid/: main.cpp
exercise week/03_DrawDiamond/: main.cpp
exercise week/04_DrawSquare/: main.cpp
exercise week/05_DrawDiagonal/: main.cpp
exercise week/06_GuessTheNumber/: main.cpp
exercise week/07_DrawChessTable/: main.cpp
exercise week/C01_helloMe/: CMakeLists.txt  main.c
exercise week/C02_helloOthers/: CMakeLists.txt  main.cpp
exercise week/C03_introduceYourself/: CMakeLists.txt  main.c
exercise week/C04_twoNumbers/: CMakeLists.txt  main.c
exercise week/C05_cuboid/: CMakeLists.txt  main.c
exercise week/C06_guessTheNumber/: CMakeLists.txt  main.c
exercise week/C07_pi/: CMakeLists.txt  main.c
exercise week/C08_separate/: CMakeLists.txt  calculate.h  main.c
exercise week/C09_oldEnough/: CMakeLists.txt  main.c
exercise week/C10_equal/: CMakeLists.txt  main.c
exercise week/C11_oddOrEven/: CMakeLists.txt  main.c
exercise week/C12_sumOfDigits/: CMakeLists.txt  main.c
exercise week/C13_prime/: CMakeLists.txt  main.c
exercise week/C14_length/: CMakeLists.txt  main.c
exercise week/C15_areTheSame/: CMakeLists.txt  main.cpp
exercise week/C16_whereIsIt/: CMakeLists.txt  main.c
week-04/day-3/01_instrumentsToStringedInstruments/: BassGuitar.cpp  BassGuitar.h  CMakeLists.txt  ElectricGuitar.cpp  ElectricGuitar.h  Instrument.h  StringedInstrument.cpp  StringedInstrument.h  Violin.cpp  Violin.h
(+536 files in other folders)
